# MsGraphAutoMail

./: .gitignore  Cargo.toml  ReadMe.md
.data/: authentication.template.json
src/: main.rs  ms_graph_client.rs
src/ms_graph_client/: access_token_response.rs  authentication.rs  models.rs  oauth2_authorization_server.rs
